--- a/_motto.scss
+++ b/_motto.scss
@@ -81,6 +81,7 @@
     .motto {
         background-image: url(../img/motto/background-tb2.jpg);
         background-size: cover;
+        height: 1000px;
 
         .container {
             .text-area {
