--- a/_motto.scss
+++ b/_motto.scss
@@ -33,7 +33,6 @@
                 font-size: 1.8rem;
                 font-weight: bold;
                 position: relative;
-                margin-left: 30px;
 
                 &::after {
                     display: block;
@@ -93,22 +92,22 @@
                 dt {
                     margin-left: 20px;
 
-                    // &::after {
-                    //     bottom: -200px;
-                    // }
+                    &::after {
+                        bottom: -100px;
+                    }
                 }
 
                 dd {
                     margin-left: 10px;
                 }
 
-                // .season {
-                //     dt {
-                //         &::after {
-                //             bottom: calc(27% - 200px);
-                //         }
-                //     }
-                // }
+                .season {
+                    dt {
+                        &::after {
+                            bottom: calc(27% - 100px);
+                        }
+                    }
+                }
             }
         }
     }
