--- a/_motto.scss
+++ b/_motto.scss
@@ -93,6 +93,7 @@
                     margin-left: 20px;
 
                     &::after {
+                        height: 5px;
                         bottom: -100px;
                     }
                 }
