--- a/_footer.scss
+++ b/_footer.scss
@@ -16,11 +16,17 @@ footer {
         height: 157px;
         margin: 30px auto 10px;
 
-        img {
+        a {
+            display: block;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            vertical-align: bottom;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                vertical-align: bottom;
+            }
         }
     }
 
