--- a/css/style.css
+++ b/css/style.css
@@ -1143,7 +1143,12 @@ footer .footer-logo {
   height: 157px;
   margin: 30px auto 10px;
 }
-footer .footer-logo img {
+footer .footer-logo a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+footer .footer-logo a img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
