--- a/_bread.scss
+++ b/_bread.scss
@@ -111,6 +111,12 @@
         .view-more {
             bottom: 0;
             right: calc(50% - 100px);
+
+            &:hover {
+                bottom: -2px;
+                right: calc(50% - 102px);
+                box-shadow: none;
+            }
         }
     }
 }
