--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,11 @@ header.open .mask {
     bottom: 0;
     right: calc(50% - 100px);
   }
+  .bread .view-more:hover {
+    bottom: -2px;
+    right: calc(50% - 102px);
+    box-shadow: none;
+  }
 }
 @media (max-width: 500px) {
   .bread-menu .item .img {
