--- a/_firstview.scss
+++ b/_firstview.scss
@@ -7,7 +7,7 @@
         display: flex;
         max-width: 100vw;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-around;
         margin-top: 0;
         padding-left: 0;
 
