--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ header.open .mask {
   display: flex;
   max-width: 100vw;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-around;
   margin-top: 0;
   padding-left: 0;
 }
